New Addition to Tech Art Section

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <div class="container_grid_techart">
                 </div>
               </main>
-              <script src="assets/js/animGrid_TechArt.js"></script>
+              <script src="assets/js/techArt-Grid.js"></script>
               <style>
                 main {
                   position: relative;
