--- a/techart/project-1/index.html
+++ b/techart/project-1/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Project-5</title>
+  <title>Project-1 | Character Skinning</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,6 +37,7 @@
 
   <!-- Template Main CSS File -->
   <link href="/assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/unity/TemplateData/style.css">
 
   <!-- =======================================================
   * Template Name: MyPortfolio - v4.7.0
@@ -80,84 +81,165 @@
   </nav>
 
   <main id="main">
-    <!-- ======= Overview Section ======= -->
     <section class="section pt-3 pb-3">
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
-            <h2 class="head_animation">Sage Welcome Ux/Ui</h2>
-            <h4>Rive - The era of Runtime Design</h4>
-            <p>Rive is designed for the world of runtime. Runtime is the period of time during which a program is
-              running. This tools help us to create interactive graphics using the new format. These tools empower
-              designers and animators to think more like devs. At the same time, they free up engineering resources, not
-              requiring a dev to be involved in every design iteration.</p>
+            <div id="unity-container" class="unity-desktop">
+              <canvas id="unity-canvas" width=960 height=540 tabindex="-1"></canvas>
+              <div id="unity-loading-bar">
+                <div id="unity-logo"></div>
+                <div id="unity-progress-bar-empty">
+                  <div id="unity-progress-bar-full"></div>
+                </div>
+              </div>
+              <div id="unity-warning"></div>
+            </div>
+
+            <!-- Place footer BELOW Unity container -->
+            <div id="unity-footer">
+              <div id="unity-logo-title-footer"></div>
+              <div id="unity-right-footer">
+                <div id="unity-build-title">Character Skinning</div>
+                <div id="unity-fullscreen-button"></div>
+              </div>
+            </div>
+            <script>
+              var canvas = document.querySelector("#unity-canvas");
+
+              // Shows a temporary message banner/ribbon for a few seconds, or
+              // a permanent error message on top of the canvas if type=='error'.
+              // If type=='warning', a yellow highlight color is used.
+              // Modify or remove this function to customize the visually presented
+              // way that non-critical warnings and error messages are presented to the
+              // user.
+              function unityShowBanner(msg, type) {
+                var warningBanner = document.querySelector("#unity-warning");
+                function updateBannerVisibility() {
+                  warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+                }
+                var div = document.createElement('div');
+                div.innerHTML = msg;
+                warningBanner.appendChild(div);
+                if (type == 'error') div.style = 'background: red; padding: 10px;';
+                else {
+                  if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+                  setTimeout(function () {
+                    warningBanner.removeChild(div);
+                    updateBannerVisibility();
+                  }, 5000);
+                }
+                updateBannerVisibility();
+              }
+
+              var buildUrl = "/assets/unity/Ch-Skinning";
+              var loaderUrl = buildUrl + "/chSkinning.loader.js";
+              var config = {
+                arguments: [],
+                dataUrl: buildUrl + "/chSkinning.data",
+                frameworkUrl: buildUrl + "/chSkinning.framework.js",
+                codeUrl: buildUrl + "/chSkinning.wasm",
+                streamingAssetsUrl: "StreamingAssets",
+                companyName: "DefaultCompany",
+                productName: "Character Skinning",
+                productVersion: "1.0",
+                showBanner: unityShowBanner,
+              };
+
+              // By default, Unity keeps WebGL canvas render target size matched with
+              // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+              // Set this to false if you want to decouple this synchronization from
+              // happening inside the engine, and you would instead like to size up
+              // the canvas DOM size and WebGL render target sizes yourself.
+              // config.matchWebGLToCanvasSize = false;
+
+              // If you would like all file writes inside Unity Application.persistentDataPath
+              // directory to automatically persist so that the contents are remembered when
+              // the user revisits the site the next time, uncomment the following line:
+              // config.autoSyncPersistentDataPath = true;
+              // This autosyncing is currently not the default behavior to avoid regressing
+              // existing user projects that might rely on the earlier manual
+              // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
+              // expected to change.
+
+              if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+                // Mobile device style: fill the whole browser client area with the game canvas:
+
+                var meta = document.createElement('meta');
+                meta.name = 'viewport';
+                meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+                document.getElementsByTagName('head')[0].appendChild(meta);
+                document.querySelector("#unity-container").className = "unity-mobile";
+                canvas.className = "unity-mobile";
+
+                // To lower canvas resolution on mobile devices to gain some
+                // performance, uncomment the following line:
+                // config.devicePixelRatio = 1;
+
+
+              } else {
+                // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+                canvas.style.width = "960px";
+                canvas.style.height = "540px";
+              }
+
+              document.querySelector("#unity-loading-bar").style.display = "block";
+
+              var script = document.createElement("script");
+              script.src = loaderUrl;
+              script.onload = () => {
+                createUnityInstance(canvas, config, (progress) => {
+                  document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+                }).then((unityInstance) => {
+                  document.querySelector("#unity-loading-bar").style.display = "none";
+                  document.querySelector("#unity-fullscreen-button").onclick = () => {
+                    unityInstance.SetFullscreen(1);
+                  };
+
+                }).catch((message) => {
+                  alert(message);
+                });
+              };
+
+              document.body.appendChild(script);
+
+            </script>
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="site-section pb-0">
-        <div class="container">
-          <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up">
-              <div class="rive_canvas">
-                <canvas id="canvas" width="640" height="564"></canvas>
-              </div>
-              <script src="https://unpkg.com/@rive-app/canvas@2.10.3"></script>
-              <script>
-                const r = new rive.Rive({
-                  src: "/assets/rive/sage.riv",
-                  canvas: document.getElementById("canvas"),
-                  autoplay: true,
-                  stateMachines: "sageState",
-                });
-              </script>
-            </div>
-            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="h3 heading_rive">Credits</h3>
-              <div class="mb-3">
-                <strong>Assets & Illustrations:</strong>
-                <span>Stock websites (Under CCL)</span>
-                <p></p>
-              </div>
-              <div class="mb-3">
-                <strong>Rigging & Animation:</strong>
-                <span>Navin Kumar</span>
-                <p></p>
-              </div>
-              <strong class="mb-3">Software:</strong>
-              <ul class="list-unstyled mb-5">
-                <li>Rive</li>
-              </ul>
-              <!--p><a href="#" class="readmore">Visit Website</a></p-->
-            </div>
-          </div>
-        </div>
-    </section><!-- End Overview Section -->
-
-    <!-- ======= Brief Concept Section ======= -->
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-          <h3 class="h3 heading">Workflow</h3>
-          <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
-
-          <p>In the above project, the software that will ultimately load this file doesn’t
-            need to know anything about the design, shapes, or the sequence the animations
-            need to play in. It just tells the Rive graphic that an area was hovered; the visual
-            state machine controls the rest.</p>
+          <h3 class="h3 heading1">Workflow</h3>
+    
+          <div class="col-md-8" data-aos="fade-up">
+            <div class="video-container2">
+              <img class="w-100" src="/assets/img/Thumbnails/character1.webp" alt="character1">
+              <p class="video-title">Skinning Editor (Rigging Process)</p>
+            </div>
+          </div>
+    
+          <div class="col-md-8" data-aos="fade-up">
+            <div class="video-container2">
+              <img class="w-100" src="/assets/img/Thumbnails/character2.webp" alt="character1">
+              <p class="video-title">Skin Manager (Custom Menu)</p>
+            </div>
+          </div>
         </div>
       </div>
-    </section><!-- End Brief Concept Section -->
+    </section>    
 
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
       <div class="row">
         <div class="col-md-12">
           <div class="align-left">
-            <a href="../project-4" class="previous round"><i class='bx bxs-chevron-left'></i></a>
+            <a href="#" class="previous round"><i class='bx bxs-chevron-left'></i></a>
           </div>
           <div class="align-right">
-            <a href="#" class="next round"><i class='bx bxs-chevron-right'></i></a>
+            <a href="../project-2" class="next round"><i class='bx bxs-chevron-right'></i></a>
           </div>
         </div>
       </div>
