Character Skinning Update

--- a/techart/project-1/index.html
+++ b/techart/project-1/index.html
@@ -133,12 +133,12 @@
               }
 
               var buildUrl = "/assets/unity/Ch-Skinning";
-              var loaderUrl = buildUrl + "/chSkinning.loader.js";
+              var loaderUrl = buildUrl + "/Ch-Skinning.loader.js";
               var config = {
                 arguments: [],
-                dataUrl: buildUrl + "/chSkinning.data",
-                frameworkUrl: buildUrl + "/chSkinning.framework.js",
-                codeUrl: buildUrl + "/chSkinning.wasm",
+                dataUrl: buildUrl + "/Ch-Skinning.data",
+                frameworkUrl: buildUrl + "/Ch-Skinning.framework.js",
+                codeUrl: buildUrl + "/Ch-Skinning.wasm",
                 streamingAssetsUrl: "StreamingAssets",
                 companyName: "DefaultCompany",
                 productName: "Character Skinning",
