Website Performance Optimizations:

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="/">
-            <img class="logo" src="assets/img/logo-nk.webp"></a>
+            <img class="logo" src="assets/img/logo-nk.webp" width="100" height="40" alt="Navin Kumar Logo" loading="eager"></a>
         </div>
         <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
           <span></span>
@@ -118,7 +118,11 @@
                   <h2>Demo Reel</h2>
                   <!-- <span>2022</span> -->
                 </div>
-                <img class="img-fluid" src="assets/img/Thumbnails/Reel Thumbnail.webp">
+                <img class="img-fluid" src="assets/img/Thumbnails/Reel Thumbnail.webp" 
+                     loading="lazy" 
+                     width="1200" 
+                     height="675"
+                     alt="Demo Reel Thumbnail">
               </a>
             </div>
           </div>
