--- a/about/index.html
+++ b/about/index.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="navbar-brand">
         <a href="/">
-          <img class="logo" src="../assets/img/logo-nk.webp" width="10%"></a>
+          <img class="logo" src="../assets/img/logo-nk.webp" width="10%">
         </a>
       </div>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
