video tab disabled

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
             src="assets/img/animation.webp" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
           <button class="tablink" onclick="openPage('TechArt', this, '#323946')" id="design_tab"><img src="assets/img/techart.webp"
               class="pic"><span class="text">&nbsp&nbspTech Art</span></button>
-          <button class="tablink" onclick="openPage('AI', this, '#323946')" id="design_tab1"><img src="assets/img/aiart.webp"
+          <button class="tablink" onclick="openPage('AI', this, '#323946')"><img src="assets/img/aiart.webp"
               class="pic"><span class="text">&nbsp&nbspAI Art</span></button>
-          <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_editing.webp"
-              class="pic"><span class="text">&nbsp&nbspVideo Editing</span></button>
+          <!-- <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_editing.webp"
+              class="pic"><span class="text">&nbsp&nbspVideo Editing</span></button> -->
           <!-- id="btn1" -->
           <div id="AI" class="tabcontent">
             <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
@@ -305,7 +305,7 @@
             </div>
           </div>
 
-          <div id="Video" class="tabcontent">
+          <!-- <div id="Video" class="tabcontent">
             <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
               <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
                 <a href="video/project-1" class="item-wrap fancybox">
@@ -356,7 +356,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
